services/placeholder/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devwiki-placeholder
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: devwiki-placeholder
