services/placeholder/manifest/httproute-https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: devwiki-placeholder-https-redirect
spec:
  hostnames:
    - devwiki.io
  parentRefs:
    - name: cluster-gw-cert
      namespace: networking
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
