services/placeholder/manifest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: devwiki-placeholder
spec:
  hostnames:
    - devwiki.io
  parentRefs:
    - name: cluster-gw
      namespace: networking
  rules:
    - backendRefs:
        - name: devwiki-placeholder
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
